# luap

./: .gitignore  Cargo.toml  LICENSE_MIT.md  README.md
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml
crates/luap/: Cargo.toml  build.rs
crates/luap-cli/: Cargo.toml
crates/luap-cli/src/: build.rs  check.rs  diagnostics.rs  lib.rs  lsp.rs  parse.rs  run.rs
crates/luap/src/: compiler.rs  diagnostics.rs  lib.rs  pointer.rs  syntax.rs  types.rs
crates/luap/src/compiling/: builder.rs  builtins.rs  bytecode.rs  compile.rs  emit.rs  mod.rs  resolve.rs
crates/luap/src/compiling/snapshots/: luap__compiling__compile__tests__compile_emits_unresolved_name_for_unknown_callee.snap  luap__compiling__compile__tests__compile_hello_world.snap
crates/luap/src/lowering/: hir.rs  lower.rs  mod.rs  query.rs  string.rs
crates/luap/src/lowering/snapshots/: luap__lowering__query__tests__lower_emits_unsupported_for_unknown_statement.snap  luap__lowering__query__tests__lower_hello_world.snap
crates/luap/src/parsing/: mod.rs  syntax_error.rs  tree.rs
crates/luap/src/vm/: builtins.rs  env.rs  frame.rs  mod.rs  native_func.rs  value.rs  virtual_machine.rs
crates/xtask/src/: main.rs
integration-tests/: Cargo.toml
integration-tests/src/: config.rs  directives.rs  discover.rs  harness.rs  lib.rs  luap_cmd.rs  normalize.rs  runner.rs
integration-tests/suites/run/: hello_world.lua
integration-tests/suites/ui/parse/: missing_paren.lua  missing_paren.stderr  unclosed_call.lua  unclosed_call.stderr  valid.lua
integration-tests/tests/: integration-tests.rs
