[package]
name = "integration-tests"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "luap-test"
path = "src/bin/luap-test.rs"

[[test]]
name = "suites"
path = "tests/suites.rs"
harness = false

[dependencies]
clap = { workspace = true }
libtest-mimic = "0.8.2"
luap-cli = { path = "../crates/luap-cli" }
regex = "1.11.1"
