[package]
name = "luap-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }

[[bin]]
name = "luap"
doc = false
