[package]
name = "luap-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
luap = { path = "../luap" }
miette = { version = "7.6.0", features = ["fancy"] }

[[bin]]
name = "luap"
doc = false
